[tool.poetry]
name = "boulderwelt-tracker"
version = "0.1.0"
description = ""
authors = ["tomazinhal <tomazinhal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pandas = "^1.2.4"
pendulum = "^2.1.2"
pyjson = "^1.3.0"
pysqlite3 = "^0.4.6"
black = "^21.5b2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
